[feat] add begin of stream
