# docs/swagger.json
@@ -154,6 +154,21 @@
                 }
             }
         },
+        "/api/payments/stream": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Payments"
+                ],
+                "summary": "récupère tous les paiements de la base de données et les renvoie",
+                "responses": {}
+            }
+        },
         "/api/payments/{id}": {
             "get": {
                 "consumes": [
